environments/base/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kustomization-microservices-ui
  labels:
    app: kustomization-microservices-ui
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: kustomization-microservices-ui
